[gd_scene load_steps=2 format=2]

[ext_resource path="res://script/Hurtbox.gd" type="Script" id=1]

[node name="Hurtbox" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="InvicibilityTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="invincibility_ended" from="." to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="." to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="timeout" from="InvicibilityTimer" to="." method="_on_InvicibilityTimer_timeout"]
